--- a/WindowsFormsApplication2/WindowsFormsApplication2.csproj
+++ b/WindowsFormsApplication2/WindowsFormsApplication2.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assignment01Form.cs">
+    <Compile Include="MailForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Assignment01Form.Designer.cs">
-      <DependentUpon>Assignment01Form.cs</DependentUpon>
+    <Compile Include="MailForm.Designer.cs">
+      <DependentUpon>MailForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Assignment01Form.resx">
-      <DependentUpon>Assignment01Form.cs</DependentUpon>
+    <EmbeddedResource Include="MailForm.resx">
+      <DependentUpon>MailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
